Fixed collecting-event